# fitrag

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  pipeline.py  query.py
app/agents/: intake_agent.py  recommendation_agent.py  retrieval_agent.py  run.py  safety_agent.py  state.py  workflow.py
app/api/: main.py
app/core/: config.py  prompts.py
app/db/: crud.py  models.py
app/eval/: eval_suite.py
app/rag/: bm25_retriever.py  embedder.py  generator.py  hybrid_retriever.py  ingest.py  reranker.py  retriever.py
fitrag-web/: README.md  index.html  package-lock.json  package.json
fitrag-web/src/: App.css  App.jsx  index.css
fitrag-web/src/api/: client.js
fitrag-web/src/pages/: HistoryPage.jsx  QueryPage.jsx  ResultsPage.jsx
fitrag-web/src/styles/: HistoryPage.css  QueryPage.css  ResultsPage.css
fitrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
